fix scrollbar corner background color

--- a/parrot_ui/styles/style.css
+++ b/parrot_ui/styles/style.css
@@ -47,6 +47,9 @@ html {
   height: 8px;
   background-color: var(--c-scrollbar-bg)
 }
+::-webkit-scrollbar-corner { 
+  background: transparent;
+ }
 
 ::-webkit-scrollbar-thumb {
   background: var(--c-scrollbar-fg);
